--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "pksokolowski.github.com.threegoals"
+        applicationId "com.github.pksokolowski.threegoals"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
