--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".alarms.AlarmReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.github.pksokolowski.threegoals.action.request_user_report" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
