add notifications manager and receiver
A NotificationsManager was implemented, handling showing the
notifications, including channels creation since Oreo. In order to
handle notification clicks, a NotificationClickReceiver got added as
well, extending BroadCastReceiver.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".notifications.NotificationsClickReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.github.pksokolowski.threegoals.action.open_reporter" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
