--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".reporter.ReporterActivity"
+            android:windowSoftInputMode="stateHidden"/>
+
         <receiver android:name=".alarms.AlarmsReceiver"
             android:exported="false">
             <intent-filter>
