fix activities having wrong parameters in manifest
MainActivity is now portrait only, as the UI doesn't make much sense in
landscape as it is now. A new layout can later be created to fit the
unique needs of the mode, but for now this is locked.

MainActivity can't be used in splitScreen feature too.

Both MainActivity and ReporterActivity are now launched in SingleTask mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="pksokolowski.github.com.threegoals">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -11,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:resizeableActivity="false"
+            android:launchMode="singleTask"
+            tools:targetApi="n">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".reporter.ReporterActivity"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="stateHidden"/>
 
         <receiver android:name=".alarms.AlarmsReceiver"
