disable boot finished receiver when not needed
BoodFinishedReceiver will now only be enabled if an edition is going on.
To prevent potential bugs, it disables itself, when it runs and
encounters no ongoing edition. It is enabled by createEdition function
placed in EditionsManager object.

This way when the user no longer wants to actively use the app, it will
not run database queries at every reboot, nor run any other code.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             </intent-filter>
         </receiver>
         <receiver android:name=".BootFinishedReceiver"
+            android:enabled="false"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
